@@ -1,8 +1,7 @@
 package webshop.backend.common.exception;
 
 import jakarta.servlet.http.HttpServletRequest;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.MethodArgumentNotValidException;
@@ -12,10 +11,9 @@ import webshop.backend.common.dto.ApiError;
 
 import java.time.LocalDateTime;
 
+@Slf4j
 @RestControllerAdvice
 public class GlobalExceptionHandler {
-
-    private static final Logger log = LoggerFactory.getLogger(GlobalExceptionHandler.class);
 
     private ApiError buildError(HttpStatus status, String message, HttpServletRequest request) {
         return new ApiError(
@@ -27,7 +25,6 @@ public class GlobalExceptionHandler {
         );
     }
 
-    // --- Specific domain not found exceptions ---
     @ExceptionHandler(UserNotFoundException.class)
     public ResponseEntity<ApiError> handleUserNotFound(UserNotFoundException ex, HttpServletRequest request) {
         log.warn("UserNotFoundException at {}: {}", request.getRequestURI(), ex.getMessage());
@@ -64,15 +61,13 @@ public class GlobalExceptionHandler {
         return ResponseEntity.status(HttpStatus.NOT_FOUND).body(buildError(HttpStatus.NOT_FOUND, ex.getMessage(), request));
     }
 
-    // --- Validation errors ---
     @ExceptionHandler(MethodArgumentNotValidException.class)
     public ResponseEntity<ApiError> handleValidation(MethodArgumentNotValidException ex, HttpServletRequest request) {
-        String message = ex.getBindingResult().getAllErrors().get(0).getDefaultMessage();
+        String message = ex.getBindingResult().getAllErrors().getFirst().getDefaultMessage();
         log.warn("Validation error at {}: {}", request.getRequestURI(), message);
         return ResponseEntity.unprocessableEntity().body(buildError(HttpStatus.UNPROCESSABLE_ENTITY, message, request));
     }
 
-    // --- Fallbacks ---
     @ExceptionHandler(RuntimeException.class)
     public ResponseEntity<ApiError> handleRuntime(RuntimeException ex, HttpServletRequest request) {
         log.error("RuntimeException at {}: {}", request.getRequestURI(), ex.getMessage(), ex);
